solved horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@ form {
 @media (max-width: 767px) {
   .animated-text-right,
   .animated-text-left {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 }
 
